[package]
name = "EthNetLite"
version = "0.1.0"
edition = "2024"

[dependencies]
k256 = {version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
rlp = "0.5"
quinn = "0.10"
tokio = { version = "1.38", features = ["full"]}
rcgen = "0.11"
bytes = "1.6"
tracing = "0.1"
tracing-subscriber = "0.3"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"


